--- a/index.html
+++ b/index.html
@@ -89,10 +89,9 @@
         function showFunnyText() {
             const texts = [
                 "👉 Ayo Follow! Dijamin Asyik!",
-                "📢 Follow biar makin hits!",
+                "📢 Follow biar makin mengenal alam!",
                 "🎉 Follow dulu baru seru!",
                 "👏 Sini follow, jangan pelit!",
-                "💬 Ayo klik, siapa tahu jodoh!"
             ];
             const randomText = texts[Math.floor(Math.random() * texts.length)];
             document.getElementById("funny-text").innerText = randomText;
@@ -101,7 +100,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Yuk Join Sosial Media Kami!</h1>
+        <h1>Yuk Join Sosial Media Ku !</h1>
         <p>Klik ikonnya, langsung asyik! ✨</p>
 
         <div class="social-icons">
@@ -111,11 +110,9 @@
             <a href="https://www.youtube.com/@Mun_Mun1" target="_blank" title="YouTube">
                 <img src="https://cdn-icons-png.flaticon.com/512/1384/1384060.png" alt="YouTube Icon">
             </a>
-            <a href="https://www.facebook.com/gak.nduwejeneng.56027" target="_blank" title="Facebook">
-                <img src="https://cdn-icons-png.flaticon.com/512/733/733547.png" alt="Facebook Icon">
+            <a href="https://www.instagram.com/munmun_077" target="_blank" title="Instagram">
+                <img src="https://cdn-icons-png.flaticon.com/512/1384/1384063.png" alt="Instagram Icon">
             </a>
-            <a href="https://wa.me/087743224968" target="_blank" title="WhatsApp">
-                <img src="https://cdn-icons-png.flaticon.com/512/733/733585.png" alt="WhatsApp Icon">
             </a>
         </div>
 
